--- a/css/style.css
+++ b/css/style.css
@@ -102,12 +102,12 @@ div#textofooter{
 /*Página de Cardápio*/
 /*Cardárpio Banner*/
 div#cardapiobanner{
-    background-image: url(../img/cardapio/cardapio-primary.png);
+    background-image: url(../img/logodaempresa2.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 230px;
-    color: #e3e2e0;
+    height: 200px;
+    color: #0a0700;
     font-family: monospace;
     position: relative;
     text-align: center;
